# telegram-analytical-api

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  unit_tests.yml
api/: README.md  database.py  main.py  scemas.py  schemas.py  test_api.py
config/: logging.yaml  settings.py
data/: .gitignore
data/processed/: .gitignore
docs/: README.md  business_understanding.md  dependencies.md  notebooks.md
medical_warehouse/: .gitkeep  README.md  dbt_project.yml
medical_warehouse/tests/: assert_no_future_messages.sql  assert_positive_views.sql
reports/: final.md  interim.md
scripts/: README.md  build_features.py  create_credit_risk_target.py  db_flow.py  load_telegram_messages.py  pipeline.py  setup_venv.ps1  test_api.py  test_rag.py  train_creditcard_models.py  train_fraud_models.py
src/: scraper.py  yolo_detect.py
src/analysis/: correlation.py  hypothesis.py
src/config/: __init__.py  constants.py  logger.py  settings.py
src/pipeline/: __init__.py  embedding.py  experiment_tracking.py  modeling_utils.py  preprocessing.py  rag.py  sentiment.py  statistical_modeling_utils.py  stock_metrics.py  tabular_modeling.py  text_analysis.py
src/preprocessing/: data_cleaning.py  eda_utils.py  preprocessor.py
src/utils/: __init__.py  data_base_loader.py  db_helper.py  metrics.py  playstore_scraper.py  plotter.py  seed.py
tests/: test_data_loader.py  test_data_processing.py  test_preprocessing.py  test_sentiment_wrapper.py  test_structure.py
(+7 files in other folders)
